<resources>
    <string name="app_name">DAILYNEWS</string>
    <string name="health" >health</string>
    <string name="bbc_headlines">bbc_headlines</string>
    <string name="science">science</string>
    <string name="technology" >technology</string>
    <string name="business">business</string>
    <string name="headlines" >headlines</string>
    <string name="sports" >sports</string>
</resources>